fixed gap after wind direction

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -179,7 +179,6 @@ main {
   position: absolute;
   z-index: 99;
   background-color: #fff;
-  max-height: -moz-fit-content;
   max-height: fit-content;
   width: 100%;
 }
@@ -411,4 +410,6 @@ main {
     overflow-x: auto;
     margin-left: 17px;
   }
-}/*# sourceMappingURL=index.css.map */
+}
+
+/*# sourceMappingURL=index.css.map */
